Non et unde nemo aut itaque modi impedit sed similique. Sed vel maxime aut accusantium voluptas dolor aliquid ut. Dolorem assumenda eveniet accusantium aliquam. Enim unde magni officia minima.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "animejs",
+*#"name": "animejs",
   "version": "3.2.1",
   "homepage": "http://animejs.com",
   "repository": "juliangarnier/anime",
@@ -36,3 +36,4 @@
     "uglify-js": "^3.3.4"
   }
 }
+ 
